--- a/arch/arm64/configs/lge_msm8996_defconfig
+++ b/arch/arm64/configs/lge_msm8996_defconfig
@@ -51,21 +51,9 @@ CONFIG_EXT4_FS_ENCRYPTION=y
 
 # DOS/FAT/NT Filesystems
 CONFIG_MSDOS_FS=n
+CONFIG_EXFAT_FS=y
 CONFIG_VFAT_FS=y
-CONFIG_SDFAT_FS=y
-CONFIG_SDFAT_USE_FOR_EXFAT=y
-CONFIG_SDFAT_USE_FOR_VFAT=n
-CONFIG_SDFAT_DELAYED_META_DIRTY=y
-CONFIG_SDFAT_SUPPORT_DIR_SYNC=y
-CONFIG_SDFAT_DEFAULT_CODEPAGE=437
-CONFIG_SDFAT_DEFAULT_IOCHARSET="utf8"
-CONFIG_SDFAT_CHECK_RO_ATTR=y
-CONFIG_SDFAT_ALIGNED_MPAGE_WRITE=y
-CONFIG_SDFAT_VIRTUAL_XATTR=y
-CONFIG_SDFAT_VIRTUAL_XATTR_SELINUX_LABEL="u:object_r:sdcard_external:s0"
-CONFIG_SDFAT_DEBUG=n
-CONFIG_SDFAT_SUPPORT_STLOG=y
-CONFIG_SDFAT_STATISTICS=y
+CONFIG_SDFAT_FS=n
 
 # Treble
 CONFIG_CP15_BARRIER_EMULATION=y
